<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="first_preferencescreen">

    <PreferenceCategory android:title="Editable Option">
        <SwitchPreferenceCompat
            app:key="pref_switch_editable"
            app:title="Editable status"
            app:defaultValue="true"
            app:summaryOn="Editable"
            app:summaryOff="Uneditable"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="View Options">
        <EditTextPreference
            android:defaultValue="@string/pref_size_default_value"
            android:key="pref_edittext_size"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_size_summary"
            android:title="Text Size"
            android:dialogTitle="@string/pref_size_dialog_title"/>

        <ListPreference
            android:key="pref_list_color"
            android:defaultValue="@string/pref_color_default_value"
            android:entries="@array/pref_color_option_labels"
            android:entryValues="@array/pref_color_option_values"
            android:summary="@string/pref_text_color_summary"
            android:title="@string/change_text_color"
            android:dialogTitle="@string/pref_color_dialog_title"/>

        <EditTextPreference
            android:key="pref_edittext_width"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:defaultValue="500"
            android:title="Field Width 50 - 1000" />

        <EditTextPreference
            android:defaultValue="100"
            android:key="pref_edittext_height"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Field Height 50 - 1000" />
    </PreferenceCategory>




</PreferenceScreen>

