<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Display Text">
        <EditTextPreference
            android:key ="pref_display_text"
            android:title="Text to display"
            android:defaultValue=""/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Language">
        <ListPreference
            android:key="pref_list_language"
            android:defaultValue="@string/pref_lan_default_value"
            android:entries="@array/pref_lan_option_labels"
            android:entryValues="@array/pref_lan_option_values"
            android:summary="@string/pref_lan_summary"
            android:title="@string/change_language"
            android:dialogTitle="@string/pref_lan_dialog_title"/>
    </PreferenceCategory>

</PreferenceScreen>